# pixal-lite

./: .gitignore  Dockerfile  README.md  log.txt  pyproject.toml  setup.sh  watch.sh
.github/workflows/: docker-build.yaml
configs/: metrics.yaml  paths.yaml
pixal/: cli.py
pixal/architectures/: autoencoder.py
pixal/models/R0_DATA_FLEX_F1/R0_Triplet_Data_Flex_F1_B_Pink_bg/metadata/: preprocessing.yaml  testModel.yaml
pixal/models/R0_DATA_FLEX_F1/R0_Triplet_Data_Flex_F1_B_Pink_bg/model/: loss_history.json
pixal/models/R0_DATA_FLEX_F1/R0_Triplet_Data_Flex_F1_F_Pink_bg/metadata/: model_training.yaml  plotting.yaml  preprocessing.yaml  testModel.yaml
pixal/models/R0_DATA_FLEX_F1/R0_Triplet_Data_Flex_F1_F_Pink_bg/model/: loss_history.json
pixal/modules/: config_loader.py  model_training.py  plotting.py  preprocessing.py
pixal/preprocessing/: align_images.py  imagePreprocessor.py  image_stack.py  remove_background.py  runner.py  zero_pruning.py
pixal/validate/: detect.py  runner.py  validate_one_model.py
